data/derived/fa15/progs/unify/prog2070.ml.out
Characters 91-92:
  | (x,y) :: t -> assoc d k t
                        ^
Error: This expression has type 'a but an expression was expected of type
         'a * 'b * ('b * ('c -> 'd -> 'e)) list
       The type variable 'a occurs inside
       'a * 'b * ('b * ('c -> 'd -> 'e)) list
